adapt drupal recipe of nginx
https://www.nginx.com/resources/wiki/start/topics/recipes/drupal/

--- a/core.d/common.conf
+++ b/core.d/common.conf
@@ -13,12 +13,29 @@ listen               *:80;
 ### Drupal specifix location rules
 #######################################################
 
+location = /favicon.ico {
+    log_not_found off;
+    access_log off;
+}
+
+
+location = /robots.txt {
+    allow all;
+    log_not_found off;
+    access_log off;
+}
+
+# Block access to txt, log, md, json files
+location ~* \.(txt|log|md|json)$ {
+  deny all;
+}
+
 #
 location ~ \..*/.*\.php$ {
   return 403;
 }
 
-#
+# Block access to private directories
 location ~ ^/sites/.*/private/ {
   return 403;
 }
@@ -28,7 +45,12 @@ location ~ ^/sites/[^/]+/files/.*\.php$ {
   deny all;
 }
 
-#
+# Allow "Well-Known URIs" as per RFC 5785
+location ~* ^/.well-known/ {
+  allow all;
+}
+
+# Block access to "hidden" files and directories
 location ~ (^|/)\. {
   return 403;
 }
@@ -40,30 +62,54 @@ location / {
 
 #
 location @rewrite {
-  rewrite ^/(.*)$ /index.php?q=$1;
+  rewrite ^ /index.php;
 }
 
 # Don't allow direct access to PHP files in the vendor directory.
+# TBC: with separated /web and /vendor directories as well?
 location ~ /vendor/.*\.php$ {
   deny all;
   return 404;
 }
 
-#
-location ~ '\.php$|^/update.php' {
-  include snippets/fastcgi-php.conf;
-  fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-  include fastcgi_params;
+# Protect files and directories from prying eyes.
+location ~* \.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^(\.(?!well-known).*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock)|web\.config)$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$ {
+  deny all;
+  return 404;
 }
 
-#
-location ~ ^/sites/.*/files/styles/ { # For Drupal >= 7
+# Route requests to FastCGI servers
+location ~ '\.php$|^/update.php' {
+  fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
+  # Ensure the php file exists. Mitigates CVE-2019-11043
+  try_files $fastcgi_script_name =404;
+  # Security note: If you're running a version of PHP older than the
+  # latest 5.3, you should have "cgi.fix_pathinfo = 0;" in php.ini.
+  # See http://serverfault.com/q/627903/94922 for details.
+  include fastcgi_params;
+  # Block httpoxy attacks. See https://httpoxy.org/.
+  fastcgi_param HTTP_PROXY      "";
+  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+  fastcgi_param PATH_INFO       $fastcgi_path_info;
+  fastcgi_param QUERY_STRING    $query_string;
+  fastcgi_intercept_errors      on;
+  fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+}
+
+# static files
+location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+  try_files $uri @rewrite;
+  expires max;
+  log_not_found off;
+}
+
+# Image styles handled by Drupal
+location ~ ^/sites/.*/files/styles/ {
   try_files $uri @rewrite;
 }
 
-#
-location ~ ^(/[a-z\-]+)?/system/files/ { # For Drupal >= 7
+# Handle private files through Drupal.
+location ~ ^(/[a-z\-]+)?/system/files/ {
   try_files $uri /index.php?$query_string;
 }
 
