--- a/core.d/common.conf
+++ b/core.d/common.conf
@@ -13,104 +13,31 @@ listen               *:80;
 ### Drupal specifix location rules
 #######################################################
 
-location = /favicon.ico {
-    log_not_found off;
-    access_log off;
-}
-
-
-location = /robots.txt {
-    allow all;
-    log_not_found off;
-    access_log off;
-}
-
-# Block access to txt, log, md, json files
-location ~* \.(txt|log|md|json)$ {
-  deny all;
-}
-
-#
-location ~ \..*/.*\.php$ {
-  return 403;
-}
-
-# Block access to private directories
-location ~ ^/sites/.*/private/ {
-  return 403;
-}
-
-# Block access to scripts in site files directory
-location ~ ^/sites/[^/]+/files/.*\.php$ {
-  deny all;
-}
-
-# Allow "Well-Known URIs" as per RFC 5785
-location ~* ^/.well-known/ {
-  allow all;
-}
-
-# Block access to "hidden" files and directories
-location ~ (^|/)\. {
-  return 403;
-}
-
 #
 location / {
   try_files $uri /index.php?$query_string;
 }
 
-#
-location @rewrite {
-  rewrite ^ /index.php;
-}
-
-# Don't allow direct access to PHP files in the vendor directory.
-# TBC: with separated /web and /vendor directories as well?
-location ~ /vendor/.*\.php$ {
-  deny all;
-  return 404;
-}
-
-# Protect files and directories from prying eyes.
-location ~* \.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^(\.(?!well-known).*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock)|web\.config)$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$ {
-  deny all;
-  return 404;
-}
-
 # Route requests to FastCGI servers
-location ~ '\.php$|^/update.php' {
+location ~ \.php$|^/update.php {
+  # capturing the $fastcgi_script_name variable (first) and the $fastcgi_path_info variable
   fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
+
   # Ensure the php file exists. Mitigates CVE-2019-11043
   try_files $fastcgi_script_name =404;
-  # Security note: If you're running a version of PHP older than the
-  # latest 5.3, you should have "cgi.fix_pathinfo = 0;" in php.ini.
-  # See http://serverfault.com/q/627903/94922 for details.
+
+  # Parameter passed to the FastCGI server
   include fastcgi_params;
-  # Block httpoxy attacks. See https://httpoxy.org/.
-  fastcgi_param HTTP_PROXY      "";
-  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-  fastcgi_param PATH_INFO       $fastcgi_path_info;
-  fastcgi_param QUERY_STRING    $query_string;
+  fastcgi_param HTTP_PROXY      "";  # Block httpoxy attacks. See https://httpoxy.org/.
+  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; # the script name to be executed by PHP
+  fastcgi_param PATH_INFO       $fastcgi_path_info; #
+  fastcgi_param QUERY_STRING    $query_string; # pass request parameters to PHP
+
+  # passing FastCGI server responses (300 or higher) to clients
   fastcgi_intercept_errors      on;
+
+  # address of the FastCGI server, as unix socket path
   fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-}
-
-# static files
-location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-  try_files $uri @rewrite;
-  expires max;
-  log_not_found off;
-}
-
-# Image styles handled by Drupal
-location ~ ^/sites/.*/files/styles/ {
-  try_files $uri @rewrite;
-}
-
-# Handle private files through Drupal.
-location ~ ^(/[a-z\-]+)?/system/files/ {
-  try_files $uri /index.php?$query_string;
 }
 
 #######################################################
