change config folder, PHP version is a variable

--- a/core.d/common.conf
+++ b/core.d/common.conf
@@ -1,10 +1,7 @@
 #######################################################
-###  nginx.conf site level extended vhost include start
+###  nginx.conf common Drupal config start
 #######################################################
 
-#
-include              fastcgi_params;
-client_max_body_size 100M;
 autoindex            off;
 listen               *:80;
 
@@ -37,9 +34,9 @@ location ~ \.php$|^/update.php {
   fastcgi_intercept_errors      on;
 
   # address of the FastCGI server, as unix socket path
-  fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+  fastcgi_pass unix:/run/php/php$V-fpm.sock;
 }
 
 #######################################################
-###  nginx.conf site level extended vhost include end
+###  nginx.conf common Drupal config end
 #######################################################
