--- a/drupal.conf
+++ b/drupal.conf
@@ -33,11 +33,6 @@ server {
 
 
 #######################################################
-###  nginx virtual domains
+###  site specific config files
 #######################################################
-
-# include nginx config for drupal core
-include /var/www/drupal/nginx-config/sites.d/*;
-
-# include nginx config for drupal modules, themes, libraries
-# include /var/www/drupal/nginx-config/modules.d/*;
+include /usr/local/etc/nginx-config/sites.d/*;
