--- a/drupal.conf
+++ b/drupal.conf
@@ -4,6 +4,71 @@
 ###  nginx.conf main
 #######################################################
 
+limit_conn_zone $binary_remote_addr zone=limreq:10m;
+gzip_static       on;
+
+
+## Size Limits
+client_body_buffer_size        64k;
+client_header_buffer_size      32k;
+connection_pool_size           256;
+fastcgi_buffer_size           128k;
+fastcgi_buffers             256 4k;
+fastcgi_busy_buffers_size     256k;
+fastcgi_temp_file_write_size  256k;
+large_client_header_buffers 32 32k;
+request_pool_size               4k;
+server_names_hash_bucket_size  512;
+
+## Timeouts
+client_body_timeout            180;
+client_header_timeout          180;
+send_timeout                   180;
+lingering_time                  30;
+lingering_timeout                5;
+fastcgi_connect_timeout        10s;
+fastcgi_send_timeout          180s;
+fastcgi_read_timeout          180s;
+
+## Open File Performance
+open_file_cache max=8000 inactive=30s;
+open_file_cache_valid          99s;
+open_file_cache_min_uses         3;
+open_file_cache_errors          on;
+
+## General Options
+ignore_invalid_headers          on;
+recursive_error_pages           on;
+reset_timedout_connection       on;
+fastcgi_intercept_errors        on;
+
+## Compression
+gzip_buffers      16 8k;
+gzip_comp_level   8;
+gzip_http_version 1.0;
+gzip_min_length   50;
+gzip_types
+  application/atom+xml
+  application/javascript
+  application/json
+  application/rss+xml
+  application/vnd.ms-fontobject
+  application/x-font-opentype
+  application/x-font-ttf
+  application/x-javascript
+  application/xhtml+xml
+  application/xml
+  application/xml+rss
+  font/opentype
+  image/svg+xml
+  image/x-icon
+  text/css
+  text/javascript
+  text/plain
+  text/xml;
+gzip_vary         on;
+gzip_proxied      any;
+
 ## Default index files
 index         index.php index.html;
 
@@ -18,6 +83,40 @@ access_log             /var/log/nginx/access.log main;
 #######################################################
 ###  nginx default maps
 #######################################################
+
+### Deny crawlers.
+map $http_user_agent $is_crawler {
+  default  '';
+  ~*HTTrack|BrokenLinkCheck|2009042316.*Firefox.*3\.0\.10   is_crawler;
+  ~*SiteBot|PECL|Automatic|CCBot|BuzzTrack|Sistrix|Offline  is_crawler;
+  ~*SWEB|Morfeus|GSLFbot|HiScan|Riddler|DBot|SEOkicks|MJ12  is_crawler;
+  ~*PChomebot|Scrap|HTMLParser|Nutch|Mireo|Semrush|Ahrefs   is_crawler;
+}
+
+### Block semalt botnet.
+map $http_referer $is_botnet {
+  default  '';
+  ~*semalt\.com|kambasoft\.com|savetubevideo\.com|bottlenose\.com|yapoga\.com  is_botnet;
+  ~*descargar-musica-gratis\.net|baixar-musicas-gratis\.com                    is_botnet;
+}
+
+### Deny all known bots/spiders on some URIs.
+map $http_user_agent $is_bot {
+  default  '';
+  ~*crawl|bot|spider|tracker|click|parser|google|yahoo|yandex|baidu|bing  is_bot;
+}
+
+### Deny almost all crawlers under high load.
+map $http_user_agent $deny_on_high_load {
+  default  '';
+  ~*crawl|spider|tracker|click|parser|google|yahoo|yandex|baidu|bing  deny_on_high_load;
+}
+
+### Deny listed requests for security reasons.
+map $args $is_denied {
+  default  '';
+  ~*delete.+from|insert.+into|select.+from|union.+select|onload|\.php.+src|system\(.+|document\.cookie|\;|\.\.\/ is_denied;
+}
 
 
 #######################################################
