--- a/drupal.conf
+++ b/drupal.conf
@@ -15,10 +15,52 @@ log_format        main '"$proxy_add_x_forwarded_for" $host [$time_local] '
 
 access_log             /var/log/nginx/access.log main;
 
+map_hash_bucket_size 256;
+
 #######################################################
 ###  nginx default maps
 #######################################################
 
+### Deny crawlers.
+map $http_user_agent $is_crawler {
+  default  '';
+  ~*HTTrack|BrokenLinkCheck|2009042316.*Firefox.*3\.0\.10   is_crawler;
+  ~*SiteBot|PECL|Automatic|CCBot|BuzzTrack|Sistrix|Offline  is_crawler;
+  ~*SWEB|Morfeus|GSLFbot|HiScan|Riddler|DBot|SEOkicks|MJ12  is_crawler;
+  ~*PChomebot|Scrap|HTMLParser|Nutch|Mireo|Semrush|Ahrefs   is_crawler;
+}
+
+### Deny all known bots/spiders on some URIs.
+map $http_user_agent $is_bot {
+  ~*crawl|bot|spider|tracker|click|parser|google|yahoo|yandex|baidu|bing  is_bot;
+}
+
+### scan cookie values
+# needed to access login page: visit backdoor for cookie or being authenticated
+map $http_cookie $is_authorized {
+  ~*login_user_token=[[:alnum:]]+ $lut;
+  ~SESS[[:alnum:]]+=(?<session_id>[[:graph:]]+)  $session_id;
+}
+
+### Set a variable for authenticated users
+map $http_cookie $is_authenticated {
+  ~SESS[[:alnum:]]+=(?<session_id>[[:graph:]]+)  $session_id;
+}
+
+### Scan URI for requests to be blocked for security reasons
+map $uri $is_blocked_uri {
+  ~\.(?:git.*|htaccess|engine|config|inc|ini|info|install|make|module|profile|test|pl|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$ blocked;
+  ~.*/composer\.(json|lock)$  blocked;
+  ~\.php(~|\.sw[op]|\.bak|\.orig|\.save)  blocked;
+  ~/(?:modules|themes|libraries)/.*\.(?:txt|md)$  blocked;
+  ~*^/sites/.*/files/config_.* blocked;
+}
+
+### List of arguments to be denied in request line for security reasons.
+#   like d10.local/node/1?w=document.cookie
+map $args $is_denied {
+  ~*delete.+from|insert.+into|select.+from|union.+select|onload|\.php.+src|system\(.+|document\.cookie|\;|\.\.\/ is_denied;
+}
 
 #######################################################
 ###  nginx default server
@@ -33,6 +75,8 @@ server {
 
 
 #######################################################
-###  site specific config files
+###  nginx virtual domains
 #######################################################
+
+# include nginx config for drupal core
 include /usr/local/etc/nginx-config/sites.d/*;
