--- a/core.d/common.conf
+++ b/core.d/common.conf
@@ -7,12 +7,73 @@ listen               *:80;
 
 
 #######################################################
-### Drupal specifix location rules
+### Drupal specific location rules adapted from
+### https://www.nginx.com/resources/wiki/start/topics/recipes/drupal/
 #######################################################
+
+#
+location = /favicon.ico {
+  log_not_found off;
+  access_log off;
+}
+
+#
+location = /robots.txt {
+  allow all;
+  log_not_found off;
+  access_log off;
+}
+
+# Very rarely should these ever be accessed outside of your lan
+location ~* \.(txt|log)$ {
+  deny all;
+}
+
+#
+location ~ \..*/.*\.php$ {
+  return 403;
+}
+
+#
+location ~ ^/sites/.*/private/ {
+  return 403;
+}
+
+# Block access to scripts in site files directory
+location ~ ^/sites/[^/]+/files/.*\.php$ {
+  deny all;
+}
+
+# Allow "Well-Known URIs" as per RFC 5785
+location ~* ^/.well-known/ {
+  allow all;
+}
+
+# Block access to "hidden" files and directories
+location ~ (^|/)\. {
+  return 403;
+}
 
 #
 location / {
   try_files $uri /index.php?$query_string;
+}
+
+#
+location @rewrite {
+  rewrite ^ /index.php; # For Drupal >= 7
+}
+
+# Don't allow direct access to PHP files in the vendor directory.
+location ~ /vendor/.*\.php$ {
+  deny all;
+  return 404;
+}
+
+# Protect files and directories from prying eyes.
+location ~* \.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^(\.(?!well-known).*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock)|web\.config)$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$ {
+  deny all;
+  return 404;
 }
 
 # Route requests to FastCGI servers
@@ -35,6 +96,30 @@ location ~ \.php$|^/update.php {
 
   # address of the FastCGI server, as unix socket path
   fastcgi_pass unix:/run/php/php$V-fpm.sock;
+}
+
+location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+  try_files $uri @rewrite;
+  expires max;
+  log_not_found off;
+}
+
+# Fighting with Styles? This little gem is amazing.
+location ~ ^/sites/.*/files/styles/ { # For Drupal >= 7
+  try_files $uri @rewrite;
+}
+
+# Handle private files through Drupal. Private file's path can come
+# with a language prefix.
+location ~ ^(/[a-z\-]+)?/system/files/ { # For Drupal >= 7
+  try_files $uri /index.php?$query_string;
+}
+
+# Enforce clean URLs
+# Removes index.php from urls like www.example.com/index.php/my-page --> www.example.com/my-page
+# Could be done with 301 for permanent or other redirect codes.
+if ($request_uri ~* "^(.*/)index\.php/(.*)") {
+  return 307 $1$2;
 }
 
 #######################################################
